--- a/combining_cleaning_heatmap_split_encodings_trainerdottrain_push.ipynb
+++ b/combining_cleaning_heatmap_split_encodings_trainerdottrain_push.ipynb
@@ -1420,7 +1420,7 @@
    ],
    "source": [
     "from huggingface_hub import login\n",
-    "login(\"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\",write_permission=True)"
+    "login(\"************************************\",write_permission=True)"
    ]
   },
   {
